# Agent_Learning

./: .gitignore  .mcp.json  README.md
.cursor/: mcp.json
gene-agent/: .env.example  .gitignore  .mcp.json  README.md  agent.py  gene_agent_server.py  gene_agent_ui.html  main.py  mcp_server.py  providers.py  pyproject.toml  skill_loader.py  test_rapid_singlecell.py
gene-agent/_archive/easy_function_calling_version/: gene_agent.py
gene-agent/record_and_thinking/: README.md  model-behaviour-react-tool-use.md  record_for_cell_typist.md  record_for_integrate_skill.md  record_for_sc_preprocess_gpu.md
gene-agent/reference/: GEO.py  download_GEO_data.py
gene-agent/skills/: gene_genomics.md  gene_proteomics.md  geo_search.md  sc_celltypist.md  sc_convert_to_h5ad.md  sc_download.md  sc_download_raw.md  sc_integrate.md  sc_preprocess.md  sc_preprocess_cpu.md  sc_preprocess_gpu.md  sc_qc.md
gene-agent/tools/: gene_query.py  geo_download.py  geo_search.py  sc_celltypist.py  sc_integrate.py  sc_pipeline.py  sc_preprocess_cpu.py  sc_preprocess_gpu.py
gene-agent/without_mcp_tools_calling/: tools.py
