[project]
name = "gene-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celltypist>=1.7.1",
    "codex>=1.9.18",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "harmonypy>=0.2.0",
    "jupyterlab>=4.5.5",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "scanpy>=1.12",
    "scrublet>=0.2.3",
]

[project.optional-dependencies]
gpu = [
    "rapids-singlecell[rapids13]>=0.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
